<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/showing_inactive"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/account_inactive"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="30sp"
            android:textColor="#20C1D3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textColor="#454F63"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/approval"
            android:textSize="18sp"
            android:textColor="#454F63"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
    android:id="@+id/city"
    android:src="@drawable/city"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/map_layout"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>